--- a/style1.css
+++ b/style1.css
@@ -11,15 +11,16 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
-}
+    background-color: #8C8279;}
 
 li {float: left;}
 
 li a {
+	font-family: 'Architects Daughter', cursive;
+	font-family: 'Cabin Sketch', cursive;
     display: block;
     color: white;
-    font-size: 15px;
+    font-size: 20px;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -31,24 +32,35 @@ padding: 14px 30px;
 text-decoration: none;
 }
 
- h1>b {color: brown;
-	font-family: Cambria;
+ h1>b {color: #E26418;
+	font-family: 'Architects Daughter', cursive;
+	font-family: 'Cabin Sketch', cursive;
 	font-size: 40px;
 	text-transform: uppercase;
 	text-align: right;
-	margin-left: 20px;
-margin-top: 0px;}
-
+	margin-left: 10px;
+    }
 
 #myCarousel {
 	position: center;
 	padding-top: 150px;
-	padding-bottom: 150px;
+	padding-bottom: 165px;
 	text-align: center;
-	color: white;
-background-blend-mode:  }
+	color: #1a0a00;
+	background: none;
+    }
 
-
+ .carousel-control.left, .carousel-control.right{ 
+    background: none !important;
+    size: 20px;
+    color: black;
+    filter: progid:none !important;>
+  }
+  .nav-link{font-family: 'Architects Daughter', cursive;
+	       font-family: 'Cabin Sketch', cursive;
+           font-size: 70px;
+           color: #E26418;
+       }
 
 	h1>b>a {color: white;
 		background-blend-mode: 20%;
