--- a/style1.css
+++ b/style1.css
@@ -5,7 +5,7 @@ body {
 		height: auto;
 		background-repeat: no-repeat;
 		background-attachment: fixed;
-    	background-size: 100%;
+    	background-size: cover;
 		backface-visibility: luminosity;
 		}
 
