--- a/style2.css
+++ b/style2.css
@@ -38,7 +38,7 @@ i{
     overflow: hidden;
 }
 
-.dropdown .dropbtn {
+.dropdown>.dropbtn {
     font-size: 16px;    
     border: none;
     outline: none;
@@ -55,7 +55,7 @@ i{
     z-index: 1;
 }
 
-.dropdown-content a {
+.dropdown-content>a {
     float: none;
     color: black;
     padding: 12px 16px;
