--- a/about.css
+++ b/about.css
@@ -58,3 +58,14 @@ h3 {text-align: center;
 
 .col-sm-3 {width: 200px}
 
+footer{
+    background: #8C8279;
+    position: fixed
+    margin: 0;
+    padding: 50px, 0
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+}
+
